# systemcontrol

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
config/: gestures.example.json
src/gesture_os_control/: __init__.py  actions.py  config.py  detector.py  main.py  mouse_controller.py
