[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handpilot"
version = "0.1.0"
description = "Control desktop apps with hand gestures using webcam"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "mediapipe",
    "pyautogui",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
handpilot = "gesture_os_control.main:run"
